# purger

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: crates-io.yml  release.yml  version-bump.yml
purger/: main.rs
purger-cli/: Cargo.toml
purger-cli/src/: lib.rs  main.rs
purger-core/: Cargo.toml
purger-core/benches/: performance_tests.rs
purger-core/examples/: test_progress.rs
purger-core/src/: cleaner.rs  filter.rs  lib.rs  project.rs  scanner.rs
purger-core/tests/: integration_tests.rs
purger-gui/: Cargo.toml
purger-gui/locales/: en.yml  zh-CN.yml
purger-gui/src/: app.rs  app_old.rs  i18n.rs  lib.rs  main.rs  simple_i18n.rs
purger-gui/src/handlers/: clean_handler.rs  mod.rs  scan_handler.rs  size_handler.rs
purger-gui/src/state/: app_state.rs  mod.rs  settings.rs
purger-gui/src/ui/: action_bar.rs  dialogs.rs  filters_panel.rs  menu_bar.rs  mod.rs  progress_bar.rs  project_details.rs  project_list.rs  scan_panel.rs
scripts/: publish.ps1  publish.sh
src/: lib.rs  main.rs
