[package]
name = "purger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A tool for cleaning Rust project build directories"
default-run = "purger"

# 默认安装 CLI 版本
[[bin]]
name = "purger"
path = "purger-cli/src/main.rs"

# 可选安装 GUI 版本
[[bin]]
name = "purger-gui"
path = "purger-gui/src/main.rs"
required-features = ["gui"]

[features]
default = ["cli"]
cli = []
gui = ["eframe", "egui", "rfd", "dirs", "serde_json", "tokio", "rust-i18n", "sys-locale"]

[dependencies]
purger-core = { path = "purger-core" }
purger-cli = { path = "purger-cli" }
# CLI dependencies
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true

# GUI dependencies (optional)
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
rust-i18n = { workspace = true, optional = true }
sys-locale = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[workspace]
members = [
    "purger-core",
    "purger-cli",
    "purger-gui"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "A tool for cleaning Rust project build directories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/purger"
homepage = "https://github.com/Latias94/purger"
documentation = "https://docs.rs/purger"
readme = "README.md"
keywords = ["rust", "cargo", "clean", "build", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.4"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
eframe = "0.32"
egui = "0.32"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
tempfile = "3.8"
# GUI-specific dependencies
rfd = "0.15"
dirs = "6.0"
rust-i18n = "3.1"
sys-locale = "0.3"
# Development dependencies
criterion = { version = "0.7", features = ["html_reports"] }

# The profile that 'cargo dist build' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist configuration
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.5"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc"
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Allow dirty working directories
allow-dirty = ["ci"]
