[package]
name = "purger"
autobins = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A tool for cleaning Rust project build directories"

# Workspace root package. This now provides the single `purger` binary.

[[bin]]
name = "purger"
path = "purger/main.rs"

[dependencies]
purger-core = { version = "0.4.0", path = "purger-core" }
purger-cli = { version = "0.4.0", path = "purger-cli" }
purger-gui = { version = "0.4.0", path = "purger-gui" }
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[workspace]
members = [
    "purger-core",
    "purger-cli",
    "purger-gui"
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "A tool for cleaning Rust project build directories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/purger"
homepage = "https://github.com/Latias94/purger"
documentation = "https://docs.rs/purger"
readme = "README.md"
keywords = ["rust", "cargo", "clean", "build", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.5"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"
tokio = { version = "1.49", features = ["full"] }
rayon = "1.11"
tempfile = "3.24"
# GUI-specific dependencies
rfd = "0.17"
dirs = "6.0"
rust-i18n = "3.1"
sys-locale = "0.3"
# Development dependencies
criterion = { version = "0.8", features = ["html_reports"] }

# The profile that 'cargo dist build' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.29.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# Include all workspace binaries
# This will automatically include purger-cli and purger-gui binaries
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
