[package]
name = "purger-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Rust project cleaner"

[lib]
name = "purger_cli"
path = "src/lib.rs"

[[bin]]
name = "purger-cli"
path = "src/main.rs"

[dependencies]
purger-core = { path = "../purger-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
