[package]
name = "purger-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for Rust project cleaner"

[lib]
name = "purger_cli"
path = "src/lib.rs"

[[bin]]
name = "purger-cli"
path = "src/main.rs"

[dependencies]
purger-core = { version = "0.3.0", path = "../purger-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
