[package]
name = "purger-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Rust project cleaning functionality"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
ignore.workspace = true
tracing.workspace = true
tokio.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "performance_tests"
harness = false
