[package]
name = "purger-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI interface for Rust project cleaner"

[[bin]]
name = "purger-gui"
path = "src/main.rs"

[dependencies]
purger-core = { path = "../purger-core" }
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
rfd = "0.14"
dirs = "5.0"
rust-i18n = "3.1"
sys-locale = "0.3"

[dev-dependencies]
tempfile = "3.8"
