[package]
name = "purger-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI interface for Rust project cleaner"

[[bin]]
name = "purger-gui"
path = "src/main.rs"

[dependencies]
purger-core = { path = "../purger-core" }
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rfd.workspace = true
dirs.workspace = true
rust-i18n.workspace = true
sys-locale.workspace = true

[dev-dependencies]
tempfile.workspace = true
