[package]
name = "purger-gui"
autobins = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GUI interface for Rust project cleaner"

[lib]
name = "purger_gui"
path = "src/lib.rs"

[dependencies]
purger-core = { version = "0.4.0", path = "../purger-core" }
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rfd.workspace = true
dirs.workspace = true
rust-i18n.workspace = true
sys-locale.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
